<resources>
    <string name="app_name">PD diary</string>
    <string name="patient_unique_id">Patient Unique ID</string>
    <string name="enter_the_id">Enter the id</string>
    <string name="patient_device_name">Patient Device Name</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="adress">Adress</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="save_info">Save Info</string>
</resources>