<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

<!--        Profile Fragment-->
        <TextView
            android:id="@+id/profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile Fragment"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple_500"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--patient id-->
        <TextView
            android:id="@+id/patient_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/patient_unique_id"
            app:layout_constraintTop_toBottomOf="@id/profile_label"
            app:layout_constraintStart_toStartOf="@id/profile_label"/>

        <EditText
            android:id="@+id/patient_id_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_id"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/patient_id_label"
            app:layout_constraintStart_toStartOf="@id/patient_id_label"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        Device Fragment-->
        <TextView
            android:id="@+id/device_heading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple_500"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/patient_id_input"
            app:layout_constraintStart_toStartOf="@id/patient_id_input"
            />

        <!-- Patient Device -->
        <TextView
            android:id="@+id/patient_device_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/patient_device_name"
            app:layout_constraintTop_toBottomOf="@id/device_heading_label"
            app:layout_constraintStart_toStartOf="@id/device_heading_label"/>

        <EditText
            android:id="@+id/patient_device_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_device_name"
            app:layout_constraintTop_toBottomOf="@id/patient_device_label"
            app:layout_constraintStart_toStartOf="@id/patient_device_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Server Heading -->
        <TextView
            android:id="@+id/server_heading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Server"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple_500"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/patient_device_input"
            app:layout_constraintStart_toStartOf="@id/patient_device_input"
            />

        <!-- Server Address -->
        <TextView
            android:id="@+id/server_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/adress"
            app:layout_constraintTop_toBottomOf="@id/server_heading_label"
            app:layout_constraintStart_toStartOf="@id/server_heading_label"/>

        <EditText
            android:id="@+id/server_address_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_server_address"
            app:layout_constraintTop_toBottomOf="@id/server_address_label"
            app:layout_constraintStart_toStartOf="@id/server_address_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--Save Button-->

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_info"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/server_address_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_marginBottom="16dp" />






    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>